[project]
name = "modal-finetune"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick Anthony",email = "nickanthony45@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal (>=0.73.141,<0.74.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
